--- a/Pages/PizzaSpecial.razor
+++ b/Pages/PizzaSpecial.razor
@@ -1,10 +1,8 @@
-﻿<li style="background-image: url('@Pizza.ImageUrl')">
-    <div class="pizza-info">
-        <span class="title">@Pizza.Name</span>
-        @Pizza.Description
-        <span class="price">@Pizza.GetFormattedBasePrice()</span>
-    </div>
-</li>
+﻿<div class="pizza-info">
+    <span class="title">@Pizza.Name</span>
+    @Pizza.Description
+    <span class="price">@Pizza.GetFormattedBasePrice()</span>
+</div>
 
 @code {
     [Parameter]
