Implementiert das Entfernen einer Pizza von dem Einkaufwagen.

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -36,9 +36,9 @@
             {
                 <div class="cart-item">
                     <div class="title">@(configuredPizza.Size)" @configuredPizza.Special.Name</div>
-                    <div class="item-price">
-                        @configuredPizza.GetFormattedTotalPrice()
-                    </div>
+                    <div class="item-price">@configuredPizza.GetFormattedTotalPrice()</div>
+                    <a class="delete-item"
+                       @onclick="@(() => OrderState.RemoveConfiguredPizza(configuredPizza))">x</a>
                 </div>
             }
         </div>
