--- a/Pages/ConfigurePizzaDialog.razor
+++ b/Pages/ConfigurePizzaDialog.razor
@@ -8,7 +8,12 @@
         <form class="dialog-body">
             <div>
                 <label>Size:</label>
-                <input type="range" min="@Model.Pizza.MinimumSize" max="@Model.Pizza.MaximumSize" step="1" />
+                <input type="range"
+                       min="@Model.Pizza.MinimumSize"
+                       max="@Model.Pizza.MaximumSize"
+                       step="1"
+                       @bind="Pizza.Size"
+                       @bind:event="oninput"/>
                 <span class="size-label">
                     @(Pizza.Size)" (£@(Pizza.GetFormattedTotalPrice()))
                 </span>
